Add YouTube and Twitch functionality changes
Improved the YouTube and Twitch functionality by changing several dependencies and features. The code now utilizes HikariCP and MySQL Connector for database connection pooling. Changes have been made to better handle exceptions and enhance database operations by using prepared statements. Changes in the Twitch and YouTube event handlers reflect the transition from flat-file to SQL storage and decrease reliance on hardcoded command strings.